# uni-timetable-bot

./: .gitignore  Cargo.toml  schema.sql
.github/workflows/: build.yml
src/: button_prefix.rs  config.rs  main.rs
src/handlers/: admin.rs  general.rs  mod.rs  schedule.rs
src/utils/: database.rs  mod.rs  time.rs
src/utils/sql/: models.rs  types.rs
