[package]
name = "uni-bot"
version = "0.1.2"
publish = false
edition = "2021"
rust-version = "1.68"
authors = ["TenkoSpirit"]
license = "MIT"

[profile.release]
strip = true
opt-level = "s"
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
rand = "0.8.5"
serde_json = "1.0.89"
anyhow = "1.0.66"
regex = "1.7.0"
log = "0.4.17"
simple_logger = "4.0.0"
thiserror = "1.0.39"
strum = { version = "0.24.1", features = ["derive"] }

[dependencies.chrono]
version = "0.4.23"
features = ["alloc", "std", "clock", "unstable-locales"]

[dependencies.teloxide]
version = "0.12.2"
features = ["auto-send", "ctrlc_handler", "native-tls", "teloxide-macros", "macros"]

[dependencies.tokio]
version = "1.23.0"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "postgres", "runtime-tokio-rustls", "uuid", "chrono"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.figment]
version = "0.10"
features = ["toml"]
